[gd_scene load_steps=64 format=3 uid="uid://dc3st7f6hmcs0"]

[ext_resource type="Script" path="res://Scenes/PansyScene.gd" id="1_0x3he"]
[ext_resource type="Texture2D" uid="uid://b0phqpmyiscrm" path="res://sprites/ranButtonDark.png" id="2_5pnjf"]
[ext_resource type="AudioStream" uid="uid://cu1chrn6ckbco" path="res://sounds/panSun.mp3" id="2_uwcs5"]
[ext_resource type="Texture2D" uid="uid://bmu1mue42kag3" path="res://sprites/ranButton.png" id="3_1c48h"]
[ext_resource type="AudioStream" uid="uid://dlyw80r7vbddn" path="res://sounds/panRain.mp3" id="3_ck5jw"]
[ext_resource type="Script" path="res://Scenes/rain.gd" id="4_wtmck"]
[ext_resource type="AudioStream" uid="uid://jleapuwequ0l" path="res://sounds/panCloud.mp3" id="4_yu0r1"]
[ext_resource type="Texture2D" uid="uid://dvx5qpqkevae7" path="res://sprites/weather/sun01.png" id="5_6f3tu"]
[ext_resource type="Texture2D" uid="uid://4kyplgn0lwsr" path="res://sprites/weather/sun04.png" id="5_7770q"]
[ext_resource type="Texture2D" uid="uid://64gj3xo8djti" path="res://sprites/weather/sun03.png" id="6_4cryh"]
[ext_resource type="Texture2D" uid="uid://d4etyl3lvppxf" path="res://sprites/cloudButtonDark.png" id="6_7g4nc"]
[ext_resource type="Texture2D" uid="uid://brugfs8mqkjo1" path="res://sprites/weather/sun02.png" id="7_hmki1"]
[ext_resource type="Texture2D" uid="uid://c5d85m7f7jqlp" path="res://sprites/cloudButton.png" id="7_r5skd"]
[ext_resource type="Script" path="res://Scenes/cloud.gd" id="8_x4ve4"]
[ext_resource type="Texture2D" uid="uid://b3nypib2lfue5" path="res://sprites/weather/cloudSprites.png" id="9_ngilp"]
[ext_resource type="Texture2D" uid="uid://dmdt7e7rroahh" path="res://sprites/sunButtonDark.png" id="10_cn64y"]
[ext_resource type="Texture2D" uid="uid://bxh71bfwewqkx" path="res://sprites/weather/dropSprites.png" id="10_owdob"]
[ext_resource type="Texture2D" uid="uid://bk22xnqi7fy1f" path="res://sprites/weather/rain02.png" id="10_thp2u"]
[ext_resource type="Texture2D" uid="uid://bebopxavibfws" path="res://sprites/sunButton.png" id="11_cvdac"]
[ext_resource type="Script" path="res://Scenes/sun.gd" id="12_up5o2"]
[ext_resource type="Texture2D" uid="uid://bcfptaabfsp67" path="res://sprites/pansySheet2.png" id="21_iwbmt"]
[ext_resource type="PackedScene" uid="uid://cxodll086p2ml" path="res://Scenes/PansyDeath.tscn" id="22_mnsjx"]

[sub_resource type="Animation" id="Animation_np7y2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("rainn/rainCloud:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("10_thp2u")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("rainn/rainDrops:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("rainn:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(584, -3)]
}

[sub_resource type="Animation" id="Animation_olpif"]
resource_name = "cloudFlow"
length = 3.0
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("clouds:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 0, 1, 0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("clouds:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(662, 180), Vector2(-236, 160)]
}

[sub_resource type="Animation" id="Animation_bwhp0"]
resource_name = "rainFlow"
length = 3.0
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("rainn/rainCloud:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("10_thp2u")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("rainn/rainDrops:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 0, 1, 2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("rainn:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(584, -3), Vector2(-610, 16)]
}

[sub_resource type="Animation" id="Animation_3i6bc"]
resource_name = "sunFlow"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sunss/sunTop:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_6f3tu")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sunss/sunRay1:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("7_hmki1")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sunss/sunRay1:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 3.13984]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("sunss/sunRay2:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_4cryh")]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("sunss/sunRay2:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -3.14159]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("sunss/sunRay3:texture")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_7770q")]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("sunss/sunRay3:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 3.14159]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("sunss:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.024467, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(513, 71), Vector2(352, -27), Vector2(-330, 15)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8ciii"]
_data = {
"RESET": SubResource("Animation_np7y2"),
"cloudFlow": SubResource("Animation_olpif"),
"rainFlow": SubResource("Animation_bwhp0"),
"sunFlow": SubResource("Animation_3i6bc")
}

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ygmux"]
texture = ExtResource("2_5pnjf")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ro0w5"]
texture = ExtResource("3_1c48h")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_64t77"]
texture = ExtResource("2_5pnjf")

[sub_resource type="InputEventKey" id="InputEventKey_1jwdx"]
device = -1
keycode = 4194321

[sub_resource type="InputEventKey" id="InputEventKey_jnn7x"]
device = -1
keycode = 68
unicode = 100

[sub_resource type="Shortcut" id="Shortcut_1s232"]
events = [SubResource("InputEventKey_1jwdx"), SubResource("InputEventKey_jnn7x")]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8pqfm"]
texture = ExtResource("6_7g4nc")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_h8wjf"]
texture = ExtResource("7_r5skd")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ooi7x"]
texture = ExtResource("6_7g4nc")

[sub_resource type="InputEventKey" id="InputEventKey_l1awp"]
device = -1
keycode = 4194322

[sub_resource type="InputEventKey" id="InputEventKey_ua8p6"]
device = -1
keycode = 83
unicode = 115

[sub_resource type="Shortcut" id="Shortcut_rjgs0"]
events = [SubResource("InputEventKey_l1awp"), SubResource("InputEventKey_ua8p6")]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7m7n1"]
texture = ExtResource("10_cn64y")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ciulo"]
texture = ExtResource("11_cvdac")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_t0tlj"]
texture = ExtResource("10_cn64y")

[sub_resource type="InputEventKey" id="InputEventKey_5jas3"]
device = -1
keycode = 4194319

[sub_resource type="InputEventKey" id="InputEventKey_s4xpl"]
device = -1
keycode = 65
unicode = 97

[sub_resource type="Shortcut" id="Shortcut_xaprs"]
events = [SubResource("InputEventKey_5jas3"), SubResource("InputEventKey_s4xpl")]

[sub_resource type="Animation" id="Animation_uw2jj"]
resource_name = "BloomRest"
length = 0.55
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [12, 13]
}

[sub_resource type="Animation" id="Animation_t80ls"]
resource_name = "BloomWin"
length = 0.75
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [14, 15, 16]
}

[sub_resource type="Animation" id="Animation_7i4em"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_1r718"]
resource_name = "bloomDeath"
length = 0.5
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [17, 18]
}

[sub_resource type="Animation" id="Animation_uvohj"]
resource_name = "fullGrown"
length = 0.5
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [15, 16]
}

[sub_resource type="Animation" id="Animation_0n463"]
resource_name = "growRest"
length = 0.5
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [8, 9]
}

[sub_resource type="Animation" id="Animation_edwde"]
resource_name = "growWin"
length = 0.75
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [10, 11, 12]
}

[sub_resource type="Animation" id="Animation_2vd78"]
resource_name = "growthDeath"
length = 0.5
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [19, 20]
}

[sub_resource type="Animation" id="Animation_66kk3"]
resource_name = "shootDeath"
length = 0.5
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [21, 22]
}

[sub_resource type="Animation" id="Animation_43ox5"]
resource_name = "shootRest"
length = 0.5
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 5]
}

[sub_resource type="Animation" id="Animation_435kr"]
resource_name = "shootWin"
length = 0.75
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [6, 7, 8]
}

[sub_resource type="Animation" id="Animation_0o3ya"]
resource_name = "singLeft"
length = 0.5
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [25, 26]
}

[sub_resource type="Animation" id="Animation_3sgag"]
resource_name = "singRight"
length = 0.5
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [27, 28]
}

[sub_resource type="Animation" id="Animation_70op2"]
resource_name = "singUp"
length = 0.5
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [29, 30]
}

[sub_resource type="Animation" id="Animation_11dr8"]
resource_name = "sproutDeath"
length = 0.5
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [23, 24]
}

[sub_resource type="Animation" id="Animation_eo5qn"]
resource_name = "sproutRest"
length = 0.5
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_71ssw"]
resource_name = "sproutWin"
length = 0.75
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [2, 3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l6uec"]
_data = {
"BloomRest": SubResource("Animation_uw2jj"),
"BloomWin": SubResource("Animation_t80ls"),
"RESET": SubResource("Animation_7i4em"),
"bloomDeath": SubResource("Animation_1r718"),
"fullGrown": SubResource("Animation_uvohj"),
"growRest": SubResource("Animation_0n463"),
"growWin": SubResource("Animation_edwde"),
"growthDeath": SubResource("Animation_2vd78"),
"shootDeath": SubResource("Animation_66kk3"),
"shootRest": SubResource("Animation_43ox5"),
"shootWin": SubResource("Animation_435kr"),
"singLeft": SubResource("Animation_0o3ya"),
"singRight": SubResource("Animation_3sgag"),
"singUp": SubResource("Animation_70op2"),
"sproutDeath": SubResource("Animation_11dr8"),
"sproutRest": SubResource("Animation_eo5qn"),
"sproutWin": SubResource("Animation_71ssw")
}

[node name="pansyScene" type="Node2D"]
position = Vector2(-260, 5)
script = ExtResource("1_0x3he")

[node name="sunBeep2" type="AudioStreamPlayer2D" parent="."]
position = Vector2(2, 39)
stream = ExtResource("2_uwcs5")

[node name="rainBeep2" type="AudioStreamPlayer2D" parent="."]
position = Vector2(565, 455)
stream = ExtResource("3_ck5jw")

[node name="cloudBeep2" type="AudioStreamPlayer2D" parent="."]
position = Vector2(486, 542)
stream = ExtResource("4_yu0r1")

[node name="fullBack" type="ColorRect" parent="."]
offset_left = -21.0
offset_top = -46.0
offset_right = 1222.0
offset_bottom = 681.0
color = Color(0.90601, 0.781016, 0.793021, 1)

[node name="envCon" type="Control" parent="."]
clip_contents = true
layout_mode = 3
anchors_preset = 0
offset_left = 346.0
offset_top = 51.0
offset_right = 782.0
offset_bottom = 427.0

[node name="envBack" type="ColorRect" parent="envCon"]
layout_mode = 0
offset_left = -11.0
offset_top = -10.0
offset_right = 445.0
offset_bottom = 379.0
color = Color(0.921569, 0.92549, 0.929412, 1)

[node name="envAnimations" type="AnimationPlayer" parent="envCon"]
autoplay = "RESET"
libraries = {
"": SubResource("AnimationLibrary_8ciii")
}

[node name="sunss" type="Node2D" parent="envCon"]
position = Vector2(513, 71)

[node name="sunRay3" type="Sprite2D" parent="envCon/sunss"]
position = Vector2(209, 131)
scale = Vector2(0.25, 0.25)
texture = ExtResource("5_7770q")

[node name="sunRay2" type="Sprite2D" parent="envCon/sunss"]
position = Vector2(209, 131)
scale = Vector2(0.25, 0.25)
texture = ExtResource("6_4cryh")

[node name="sunRay1" type="Sprite2D" parent="envCon/sunss"]
position = Vector2(209, 131)
scale = Vector2(0.25, 0.25)
texture = ExtResource("7_hmki1")

[node name="sunTop" type="Sprite2D" parent="envCon/sunss"]
position = Vector2(209, 131)
scale = Vector2(0.25, 0.25)
texture = ExtResource("5_6f3tu")

[node name="rainn" type="Node2D" parent="envCon"]
position = Vector2(584, -3)

[node name="rainDrops" type="Sprite2D" parent="envCon/rainn"]
position = Vector2(216, 225)
scale = Vector2(0.5, 0.5)
texture = ExtResource("10_owdob")
hframes = 3

[node name="rainCloud" type="Sprite2D" parent="envCon/rainn"]
position = Vector2(219, 14)
scale = Vector2(0.5, 0.5)
texture = ExtResource("10_thp2u")

[node name="clouds" type="Sprite2D" parent="envCon"]
position = Vector2(662, 180)
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_ngilp")
hframes = 2

[node name="rain" type="Button" parent="."]
offset_left = 565.0
offset_top = 455.0
offset_right = 692.0
offset_bottom = 556.0
mouse_filter = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_ygmux")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ro0w5")
theme_override_styles/disabled = SubResource("StyleBoxTexture_64t77")
button_mask = 0
shortcut = SubResource("Shortcut_1s232")
script = ExtResource("4_wtmck")

[node name="rainBeep" type="AudioStreamPlayer2D" parent="rain"]
stream = ExtResource("3_ck5jw")

[node name="cloud" type="Button" parent="."]
offset_left = 486.0
offset_top = 542.0
offset_right = 608.0
offset_bottom = 642.0
mouse_filter = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_8pqfm")
theme_override_styles/pressed = SubResource("StyleBoxTexture_h8wjf")
theme_override_styles/disabled = SubResource("StyleBoxTexture_ooi7x")
button_mask = 0
shortcut = SubResource("Shortcut_rjgs0")
script = ExtResource("8_x4ve4")

[node name="cloudBeep" type="AudioStreamPlayer2D" parent="cloud"]
stream = ExtResource("4_yu0r1")

[node name="sun" type="Button" parent="."]
offset_left = 410.0
offset_top = 456.0
offset_right = 530.0
offset_bottom = 554.0
mouse_filter = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_7m7n1")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ciulo")
theme_override_styles/disabled = SubResource("StyleBoxTexture_t0tlj")
button_mask = 0
shortcut = SubResource("Shortcut_xaprs")
expand_icon = true
script = ExtResource("12_up5o2")

[node name="sunBeep" type="AudioStreamPlayer2D" parent="sun"]
position = Vector2(-408, -417)
stream = ExtResource("2_uwcs5")

[node name="Pansy" type="Sprite2D" parent="."]
position = Vector2(558, 245)
scale = Vector2(0.727631, 0.727631)
texture = ExtResource("21_iwbmt")
hframes = 31

[node name="AnimationPlayer" type="AnimationPlayer" parent="Pansy"]
autoplay = "sproutRest"
libraries = {
"": SubResource("AnimationLibrary_l6uec")
}

[node name="dayCounter" type="Control" parent="."]
visible = false
custom_minimum_size = Vector2(450, 0)
layout_mode = 3
anchors_preset = 0
offset_left = 338.0
offset_top = 1.0
offset_right = 788.0
offset_bottom = 41.0

[node name="HBoxContainer" type="HBoxContainer" parent="dayCounter"]
custom_minimum_size = Vector2(450, 40)
layout_direction = 2
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect1" type="ColorRect" parent="dayCounter/HBoxContainer"]
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_right = NodePath("../ColorRect2")

[node name="ColorRect2" type="ColorRect" parent="dayCounter/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_right = NodePath("../ColorRect3")

[node name="ColorRect3" type="ColorRect" parent="dayCounter/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_right = NodePath("../ColorRect4")

[node name="ColorRect4" type="ColorRect" parent="dayCounter/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_right = NodePath("../ColorRect5")

[node name="ColorRect5" type="ColorRect" parent="dayCounter/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_right = NodePath("../ColorRect6")

[node name="ColorRect6" type="ColorRect" parent="dayCounter/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_right = NodePath("../ColorRect7")

[node name="ColorRect7" type="ColorRect" parent="dayCounter/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_right = NodePath("../ColorRect8")

[node name="ColorRect8" type="ColorRect" parent="dayCounter/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_right = NodePath("../ColorRect9")

[node name="ColorRect9" type="ColorRect" parent="dayCounter/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_right = NodePath("../ColorRect10")

[node name="ColorRect10" type="ColorRect" parent="dayCounter/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_right = NodePath("../ColorRect11")

[node name="ColorRect11" type="ColorRect" parent="dayCounter/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_right = NodePath("../ColorRect12")

[node name="ColorRect12" type="ColorRect" parent="dayCounter/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="falseSun" type="Sprite2D" parent="."]
visible = false
position = Vector2(469.188, 505)
scale = Vector2(0.601876, 0.5)
texture = ExtResource("11_cvdac")

[node name="falseRain" type="Sprite2D" parent="."]
visible = false
position = Vector2(628.5, 505)
scale = Vector2(0.635, 0.5)
texture = ExtResource("3_1c48h")

[node name="falseCloud" type="Sprite2D" parent="."]
visible = false
position = Vector2(547, 592)
scale = Vector2(0.61, 0.505)
texture = ExtResource("7_r5skd")

[node name="playTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="pansyDeath" parent="." instance=ExtResource("22_mnsjx")]
visible = false
offset_left = 563.0
offset_top = 311.0
offset_right = 603.0
offset_bottom = 351.0

[node name="deathTImer" type="Timer" parent="."]
one_shot = true

[node name="winTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="rain" to="rain" method="_on_pressed"]
[connection signal="pressed" from="cloud" to="cloud" method="_on_pressed"]
[connection signal="pressed" from="sun" to="sun" method="_on_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="playTimer" to="." method="_on_play_timer_timeout"]
[connection signal="timeout" from="deathTImer" to="." method="_on_death_t_imer_timeout"]
[connection signal="timeout" from="winTimer" to="." method="_on_win_timer_timeout"]
